# skalarwelle

./: .gitignore  Makefile.am  configure.ac
libskalarwelle/: Makefile.am  Makefile.in  Mumble.pb-c.c  configure.ac  indent.sh  libskalarwelle.c  network.c  packet_data_stream.c  skalarwelle.pc.in
libskalarwelle/src/: Mumble.pb-c.c  Mumble.pb-c.h  connection.c  connection.h  error.c  error.h  indent.sh  libskalarwelle.c  libskalarwelle.h  network.h  packet_data_stream.h  packet_header.h
po/: POTFILES.in
skalarwelle/: Makefile.am  README.md  configure.ac
skalarwelle/po/: de.po  skalarwelle.pot
skalarwelle/src/: application.c  com.github.promi.cmumble.gschema.xml  com.github.promi.skalarwelle.gschema.xml  connect-dialog.c  connect-dialog.h  indent.sh  main-window.c  main-window.h  main.c  resources.xml  skalarwelle-application.c  skalarwelle-connect-dialog.c  skalarwelle-connect-dialog.h  skalarwelle-connect-dialog.ui  skalarwelle-main-window.c  skalarwelle-main-window.h  skalarwelle-main-window.ui
src/: Makefile.am  indent.sh  main.c  resources.xml  skalarwelle-application.c  skalarwelle-application.h  skalarwelle-main-window.c  skalarwelle-main-window.h  skalarwelle-main-window.ui  skalarwelle.c  skalarwelle.h  skalarwelle.ui
