AC_INIT([skalarwelle], 0.1)
AM_INIT_AUTOMAKE([foreign])
AM_SILENT_RULES([yes])

IT_PROG_INTLTOOL([0.35.0])
AC_PROG_CC

GETTEXT_PACKAGE=skalarwelle
AC_SUBST(GETTEXT_PACKAGE)
AC_DEFINE_UNQUOTED(GETTEXT_PACKAGE,"$GETTEXT_PACKAGE", [GETTEXT package name])
AM_GLIB_GNU_GETTEXT

PKG_CHECK_MODULES(SKALARWELLE, [gtk+-3.0 >= 2.90.3 skalarwelle-0])

AC_CONFIG_HEADERS([config.h])

AC_CONFIG_FILES([Makefile po/Makefile.in])

GLIB_GSETTINGS

AC_OUTPUT
